Fix layout problem

--- a/graphics/bingo.css
+++ b/graphics/bingo.css
@@ -56,6 +56,6 @@ div.info.r2 {
 div.info {
     z-index: 99;
     width: 428px;
-    top: 60px;
+    top: 0px;
     left: 426px;
 }
